basic design done, eager to work on jquery and ajax

--- a/public/login.html
+++ b/public/login.html
@@ -6,43 +6,47 @@
     <title>Login to bloop.xyz</title>
     <meta content="" name="description" />
     <meta content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" name="viewport" />
-</head>
-<body>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-<header>
+</head>
+<body class="d-flex" style="background-color: thistle; flex-direction: column;">
+
+<header class="d-flex" style="flex-direction: column; align-items: center; background-color: lavender; width: 100%;">
     <h1><a href="#">bloop.xyz</a></h1>
     <p class="tagline">Have you blooped today?</p>
 </header>
 
-<section class="main-content">
-    <form class="login-form">
-        <h1>Login to bloop.xyz</h1>
-        <div class="input-row"
+<section class="main-content d-flex" style="flex-direction: column; align-items: center;">
+    <form class="login-form d-flex" style="flex-direction: column; margin-top: 20px; background-color: white; border: solid; padding: 10px;">
+        <h1 class="d-flex">Login to bloop.xyz</h1>
+        <div class="input-row d-flex" style="margin-bottom: 10px; align-self: center;">
             <label for="loginInput">Username:</label>
-            <input class="big-input" type="text" id="loginInput" />
+            <input class="big-input" type="text" id="loginInput" style="margin-left: 5px;"/>
         </div>
-        <div class="input-row">
+        <div class="input-row d-flex" style="margin-bottom: 10px; align-self: center;">
             <label for="passwordInput">Password:</label>
-            <input class="big-input" type="password" id="passwordInput" />
+            <input class="big-input" type="password" id="passwordInput" style="margin-left: 10px;"/>
         </div>
-        <div class="action-row">
-            <button class="primary-btn" id="loginBtn">Log In</button>
+        <div class="action-row d-flex" style="margin-bottom: 10px; align-self: center;">
+            <button class="primary-btn" id="loginBtn" style="background-color: purple; color: white;">Log In</button>
         </div>
     </form>
-    <div class="help-center">
+    <div class="help-center d-flex" style="flex-direction: column; align-items: center; margin-top: 20px;">
         <a href="#">Don't have an account?</a>
         <a href="#">Need help logging in?</a>
     </div>
 </section>
 
-<footer>
-    <ul>
-        <li>&copy; 2017 bloop.xyz</li>
-        <li><a href="#">Terms and Conditions</a></li>
-        <li><a href="#">The Bloop.xyz Guarantee</a></li>
-        <li>Made in Texas</li>
+<footer class="d-flex" style="background-color: lavender; position: absolute; bottom: 0; width: 100%;">
+    <ul class="d-flex" style="list-style-type: none; width: 100%;">
+        <li class="d-flex">&copy; 2017 bloop.xyz</li>
+        <li class="d-flex"><a href="#">Terms and Conditions</a></li>
+        <li class="d-flex"><a href="#">The Bloop.xyz Guarantee</a></li>
+        <li class="d-flex">Made in Texas</li>
     </ul>
 </footer>
-
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
