styling done ok, eager to work on jquery/ajax

--- a/public/login.html
+++ b/public/login.html
@@ -38,7 +38,7 @@
 </section>
 
 <footer class="d-flex" style="background-color: lavender; position: absolute; bottom: 0; width: 100%;">
-    <ul class="d-flex" style="list-style-type: none; width: 100%;">
+    <ul class="d-flex" style="list-style-type: none; width: 100%; justify-content: space-around;">
         <li class="d-flex">&copy; 2017 bloop.xyz</li>
         <li class="d-flex"><a href="#">Terms and Conditions</a></li>
         <li class="d-flex"><a href="#">The Bloop.xyz Guarantee</a></li>
